@@ -197,10 +197,10 @@ void register_ndhist()
               "ndarray.view method in order to get a view on a MxN array to "
               "fill it into a N-dimensional histogram with M entries.")
 
-        .add_property("max_tuple_fill_ndim", &ndhist::get_max_tuple_fill_nd
+        .add_property("MAX_TUPLE_FILL_NDIM", &ndhist::get_max_tuple_fill_nd
             , "The maximal dimensionality of the histogram, which "
               "is still supported for filling with a tuple of arrays as "
-              "ndvalue function argument. Otherwise a structured array needs "
+              "ndvalue function argument. Otherwise a structured ndarray needs "
               "to be used as ndvalue argument.")
 
         .def("clear", &ndhist::clear
